@@ -1,3 +1,6 @@
+-----------------------------
+lambkit-1.0.3:
+优化：优化数据库密码加密解密，用户可自定义算法。用户可采用继承LambkitPasswordCracker进行加密解密，默认解密方式时，当密码小于24位时使用明码。
 
 -----------------------------
 lambkit-1.0.2:
